Autoplay for video-player is set. Video-player is set to be the background.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="feature">
     <div class="video-player">
-            <video id="videoPlayer" controls autoplay>
+            <video id="videoPlayer" autoplay muted>
                 <source src="videos/trailer-kaguyasama-loveiswar.mp4" type="video/mp4">
             </video>
         </div>
